fixed the BattleResultSaver
Took 8 minutes